--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@
   "Carrier" : "INSERT TOKEN",
   "HYPY" : "INSERT API KEY",
   "MGUILD" : "INSERT GUILD ID AS INT",
-  "MONPY" : "INSERT MONGO KEY"
+  "MONPY" : "gGldZkDaiBtXAWbO"
 }
